--- a/grid.html
+++ b/grid.html
@@ -75,7 +75,7 @@
 </dl>
 
 
-<h2 id=what_is_a_hub_and_node>What is a Hub and Node?</h2>
+<h2>What is a Hub and Node?</h2>
 
 <p>A <em>hub</em> is a central point
  from where your tests will be kicked off.
@@ -94,7 +94,7 @@
  whereas this wouldn't be possible on Linux or Mac.
 
 
-<h2 id=rolling_your_own_grid>Rolling Your Own Grid</h2>
+<h2>Rolling Your Own Grid</h2>
 
 <p>To use Selenium Grid
  you must maintain your own infrastructure for the nodes.
