--- a/intro.html
+++ b/intro.html
@@ -5,7 +5,7 @@
 <h1>Introduction</h1>
 
 
-<h2 id=project>The Selenium Project and Tools</h2>
+<h2>The Selenium Project and Tools</h2>
 
 
 <h3>Selenium controls web browsers</h3>
