--- a/javasupport.html
+++ b/javasupport.html
@@ -5,7 +5,7 @@
 <h1>The Java Support Package</h1>
 
 
-<h2 id=working_with_colours>Working With Colours</h2>
+<h2>Working With Colours</h2>
 
 <p>You will occasionally want to validate the colour of a thing as part of your tests,
  the problem is that colour definitions on the web are not constant.
