--- a/remote.html
+++ b/remote.html
@@ -13,7 +13,7 @@ server. The client is your WebDriver test and the server is simply a
 Java servlet, which can be hosted in any modern JEE app server.
 
 
-<h2 id=the_remote_webdriver_server>The RemoteWebDriver Server</h2>
+<h2>The RemoteWebDriver Server</h2>
 
 The server will always run on the machine with the browser you want to
 test. There are two ways to user the server: command line or
