--- a/start.html
+++ b/start.html
@@ -27,7 +27,7 @@
  <a href=drivers.html>Driver Idiosyncracies</a>.
 
 
-<h2 id=consumer_browsers>Consumer Browsers</h2>
+<h2>Consumer Browsers</h2>
 
 <p>The Selenium framework officially supports the following browsers:
 
@@ -42,7 +42,7 @@
 </table>
 
 
-<h2 id=specialized_browsers>Specialized Browsers</h2>
+<h2>Specialized Browsers</h2>
 
 <p>There are also a set of specialized browsers out there
  typically used in development environments.
@@ -66,7 +66,7 @@
 </table>
 
 
-<h2 id=locating_elements>Locating Elements</h2>
+<h2>Locating Elements</h2>
 
 
 <h3>Locating One Element</h3>
@@ -223,7 +223,7 @@ is an expensive operation, and the more you can narrow the scope of
 your search, the better.
 
 
-<h2 id=performing_actions_on_the_aut>Performing Actions on the AUT</h2>
+<h2>Performing Actions on the AUT</h2>
 
 <p>You can set an element's text using the sendKeys method as follows:
 
