--- a/wd.html
+++ b/wd.html
@@ -37,7 +37,7 @@
 </ul>
 
 
-<h2 class=driver_requirements>Driver Requirements</h2>
+<h2>Driver Requirements</h2>
 
 <p>Through WebDriver, Selenium supports all major browsers on the market
  such as Chrom(ium), Firefox, Internet Explorer, Opera, and Safari.
@@ -175,7 +175,7 @@ driver = Selenium::WebDriver.for :opera</code></pre>
 <h4>PhantomJS</h4>
 
 
-<h2 id=browser_launching_and_manipulation>Browser Launching and Manipulation</h2>
+<h2>Browser Launching and Manipulation</h2>
 
 <!-- #codeExamples -->
 <!-- Remember to cover profile and extensions here -->
@@ -203,7 +203,7 @@ This should open a new Internet Explorer window:
 driver = Selenium::WebDriver.for :internet_explorer</code></pre>
 
 
-<h2 id=waits>Waits (Implicit and Explicit)</h2>
+<h2>Waits (Implicit and Explicit)</h2>
 
 <p>Waiting is having the automated task execution
  elapse a certain amount of time before continuing with the next step.
