Add docs.js that currently only adds anchors to headers

--- a/ack.html
+++ b/ack.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <meta charset=utf-8>
 <title>Acknowledgements</title>
+<script src=docs.js></script>
 
 <h1>Acknowledgements</h1>
 
