--- a/attr.html
+++ b/attr.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <meta charset=utf-8>
 <title>Copyright and Attributions</title>
+<script src=docs.js></script>
 
 <h1>Copyright and Attributions</h1>
 
