--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <meta charset=utf-8>
 <title>Selenium Documentation</title>
 <link rel=stylesheet href=se.css>
+<script src=docs.js></script>
 
 <h1>The Selenium Browser Automation Project</h1>
 
