--- a/drivers.html
+++ b/drivers.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <meta charset=utf-8>
 <title>Driver Idiosyncrasies</title>
+<script src=docs.js></script>
 
 <h1>Driver Idiosyncrasies</h1>
 
