--- a/remote.html
+++ b/remote.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <meta charset=utf-8>
 <title>Remote WebDriver</title>
+<script src=docs.js></script>
 
 <h1>Remote WebDriver</h1>
 
