Mark where the TOC should be

--- a/index.html
+++ b/index.html
@@ -56,63 +56,8 @@ search_box.submit()</code></pre>
 <p>Narrative documentation in chapter form
  explaining how to use Selenium in detail, from bottom up.
 
-<ul>
- <li><a href=intro.html>Introduction</a>
-  <ul>
-   <li><a href=intro.html#project>The Selenium Project and Tools</a>
-   <li><a href=intro.html#automation>On Test Automation</a>
-   <li><a href=intro.html#types>Types of Testing</a>
-   <li><a href=intro.html#docs>About This Documentation</a>
-  </ul>
- <li><a href=install.html>Installation</a>
- <li><a href=start.html>Getting Staretd with WebDriver</a>
-  <ul>
-   <li><a href=start.html#consumer_browsers>Consumer Browsers</a>
-   <li><a href=start.html#specialized_browsers>Specialized Browsers</a>
-   <li><a href=start.html#locating_elements>Locating Elements</a>
-   <li><a href=start.html#performing_actions_on_the_aut>Performing Actions on the AUT</a>
-  </ul>
- <li><a href=wd.html>WebDriver</a>
-  <ul>
-   <li><a href=wd.html#driver_requirements>Driver Requirements</a>
-   <li><a href=wd.html#browser_launching_and_manipulation>Browser Launching and Manipulation</a>
-   <li><a href=wd.html#waits>Waits (Implicit and Explicit)</a>
-   <li><a href=wd.html#support_classes>Support Classes</a>
-  </ul>
- <li><a href=remote.html>Remote WebDriver</a>
-  <ul>
-   <li><a href=remote.html#the_remote_webdriver_server>The Remote WebDriver Server</a>
-   <li><a href=remote.html#running_remotewebdriver_client>Running RemoteWebDriver Client</a>
-  </ul>
- <li><a href=best.html>Best Practices</a>
-  <ul>
-   <li><a href=best.html#page_object_models>Page Object Models</a>
-   <li><a href=best.html#domain_specific_language>Domain Specific Language</a>
-   <li><a href=best.html#generating_application_state>Generating Application State</a>
-   <li><a href=best.html#mock_external_services>Mock External Services</a>
-   <li><a href=best.html#improved_reporting>Improved Reporting</a>
-   <li><a href=best.html#avoid_sharing_state>Avoid Sharing State</a>
-   <li><a href=best.html#consider_using_a_fluent_api>Consider Using a Fluent API</a>
-   <li><a href=best.html#fresh_browser_per_test>Fresh Browser Per Test</a>
-  </ul>
- <li><a href=worst.html>Worst Practices</a>
-  <ul>
-   <li><a href=worst.html#captchas>Captchas</a>
-   <li><a href=worst.html#file_downloads>File Downloads</a>
-   <li><a href=worst.html#http_response_codes>HTTP Response Codes</a>
-   <li><a href=worst.html#gmail>Gmail, Email, and Facebook Logins</a>
-   <li><a href=worst.html#performance_testing>Performance Testing</a>
-   <li><a href=worst.html#link_spidering>Link Spidering</a>
-  </ul>
- <li><a href=grid.html>Selenium Grid</a>
-  <ul>
-   <li><a href=grid.html#pros_and_cons>Pros and Cons</a>
-   <li><a href=grid.html#what_is_a_hub_and_node>What Is A Hub And Node?</a>
-   <li><a href=grid.html#rolling_your_own_grid>Rolling Your Own Grid</a>
-  </ul>
- <li><a href=drivers.html>Driver Idiosyncrasies</a>
- <li><a href=javasupport.html>The Java Support Package</a>
-</ul>
+<!-- TOC -->
+<!-- /TOC -->
 
 
 <h2>Front Matter</h2>
