Add utility to replace inner HTML of documents

--- a/index.html
+++ b/index.html
@@ -56,8 +56,7 @@ search_box.submit()</code></pre>
 <p>Narrative documentation in chapter form
  explaining how to use Selenium in detail, from bottom up.
 
-<!-- TOC -->
-<!-- /TOC -->
+<div id=toc></div>
 
 
 <h2>Front Matter</h2>
