--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
-<!doctype html>
-<meta charset=utf-8>
+<!DOCTYPE html><meta charset=utf-8>
 <title>Selenium Documentation</title>
-<link rel=stylesheet href=se.css>
+<link href=se.css rel=stylesheet>
 <script src=docs.js></script>
 
 <h1>The Selenium Browser Automation Project</h1>
@@ -56,7 +55,80 @@ search_box.submit()</code></pre>
 <p>Narrative documentation in chapter form
  explaining how to use Selenium in detail, from bottom up.
 
-<div id=toc></div>
+<div id=toc><ul>
+ <li><a href=intro.html#introduction>Introduction</a>
+  <ul>
+   <li><a href=intro.html#the_selenium_project_and_tools>The Selenium Project and Tools</a>
+   <li><a href=intro.html#on_test_automation>On Test Automation</a>
+   <li><a href=intro.html#types_of_testing>Types of Testing</a>
+   <li><a href=intro.html#about_this_documentation>About This Documentation</a>
+  </ul></li>
+ <li><a href=install.html#selenium_installation>Selenium Installation</a>
+ <li><a href=start.html#getting_started_with_webdriver>Getting Started With WebDriver</a>
+  <ul>
+   <li><a href=start.html#consumer_browsers>Consumer Browsers</a>
+   <li><a href=start.html#specialized_browsers>Specialized Browsers</a>
+   <li><a href=start.html#locating_elements>Locating Elements</a>
+   <li><a href=start.html#performing_actions_on_the_aut>Performing Actions on the AUT</a>
+  </ul></li>
+ <li><a href=wd.html#webdriver>WebDriver</a>
+  <ul>
+   <li><a href=wd.html#driver_requirements>Driver Requirements</a>
+   <li><a href=wd.html#browser_launching_and_manipulation>Browser Launching and Manipulation</a>
+   <li><a href=wd.html#waits_implicit_and_explicit>Waits (Implicit and Explicit)</a>
+   <li><a href=wd.html#support_classes>Support Classes</a>
+   <li><a href=wd.html#http_proxies>HTTP Proxies</a>
+  </ul></li>
+ <li><a href=remote.html#remote_webdriver>Remote WebDriver</a>
+  <ul>
+   <li><a href=remote.html#the_remotewebdriver_server>The RemoteWebDriver Server</a>
+   <li><a href=remote.html#running_remotewebdriver_client>Running RemoteWebDriver Client</a>
+  </ul></li>
+ <li><a href=best.html#best_practices>Best Practices</a>
+  <ul>
+   <li><a href=best.html#page_object_models>Page Object Models</a>
+   <li><a href=best.html#domain_specific_language>Domain Specific Language</a>
+   <li><a href=best.html#generating_application_state>Generating Application State</a>
+   <li><a href=best.html#mock_external_services>Mock External Services</a>
+   <li><a href=best.html#improved_reporting>Improved Reporting</a>
+   <li><a href=best.html#avoid_sharing_state>Avoid Sharing State</a>
+   <li><a href=best.html#consider_using_a_fluent_api>Consider Using a Fluent API</a>
+   <li><a href=best.html#fresh_browser_per_test>Fresh Browser Per Test</a>
+  </ul></li>
+ <li><a href=worst.html#worst_practices>Worst Practices</a>
+  <ul>
+   <li><a href=worst.html#captchas>Captchas</a>
+   <li><a href=worst.html#file_downloads>File Downloads</a>
+   <li><a href=worst.html#http_response_codes>HTTP Response Codes</a>
+   <li><a href=worst.html#gmail_email_and_facebook_logins>Gmail, Email, and Facebook Logins</a>
+   <li><a href=worst.html#performance_testing>Performance Testing</a>
+   <li><a href=worst.html#link_spidering>Link Spidering</a>
+  </ul></li>
+ <li><a href=grid.html#selenium_grid>Selenium Grid</a>
+  <ul>
+   <li><a href=grid.html#pros_and_cons>Pros and Cons</a>
+   <li><a href=grid.html#what_is_a_hub_and_node>What is a Hub and Node?</a>
+   <li><a href=grid.html#rolling_your_own_grid>Rolling Your Own Grid</a>
+  </ul></li>
+ <li><a href=drivers.html#driver_idiosyncrasies>Driver Idiosyncrasies</a>
+  <ul>
+   <li><a href=drivers.html#shared_capabilities>Shared capabilities</a>
+   <li><a href=drivers.html#driver_specific_capabilities>Driver specific capabilities</a>
+  </ul></li>
+ <li><a href=javasupport.html#the_java_support_package>The Java Support Package</a>
+  <ul>
+   <li><a href=javasupport.html#working_with_colours>Working With Colours</a>
+   <li><a href=javasupport.html#working_with_select_elements>Working With <select> Elements</select></a>
+  </ul></li>
+ <li><a href=attr.html#copyright_and_attributions>Copyright and Attributions</a>
+  <ul>
+   <li><a href=attr.html#attributions>Attributions</a>
+   <li><a href=attr.html#html_version_and_source_code>HTML Version and Source Code</a>
+   <li><a href=attr.html#license>License</a>
+  </ul></li>
+ <li><a href=ack.html#acknowledgements>Acknowledgements</a>
+</ul>
+</div>
 
 
 <h2>Front Matter</h2>
@@ -66,3 +138,5 @@ search_box.submit()</code></pre>
  <li><a href=conventions.html>Typographical Conventions</a>
  <li><a href=ack.html>Ackknowledgements</a>
 </ul>
+
+
