<select> -> <code>select</code>

--- a/javasupport.html
+++ b/javasupport.html
@@ -67,7 +67,7 @@ assert loginButtonBackgroundColour.asRgb().equals("rgb(255, 105, 180)");</code><
 <p>Colours are no longer a problem.
 
 
-<h2 class=working_with_select_elements>Working With &lt;select&gt; Elements</h2>
+<h2 class=working_with_select_elements>Working With <code>select</code> Elements</h2>
 
 <p>Select elements can require quite a bit of boiler plate code to automate.
  To reduce this and make your tests cleaner there is a
