Generate both narrative and front matter menus

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@ search_box.submit()</code></pre>
 <p>Narrative documentation in chapter form
  explaining how to use Selenium in detail, from bottom up.
 
-<div id=toc><ul>
+<div id=narrative><ul>
  <li><a href=intro.html#introduction>Introduction</a>
   <ul>
    <li><a href=intro.html#the_selenium_project_and_tools>The Selenium Project and Tools</a>
@@ -133,7 +133,7 @@ search_box.submit()</code></pre>
 
 <h2>Front Matter</h2>
 
-<ul>
+<ul id=frontmatter>
  <li><a href=attr.html>Copyright and Attributions</a>
  <li><a href=conventions.html>Typographical Conventions</a>
  <li><a href=ack.html>Ackknowledgements</a>
