Generate both menus in index.html

--- a/index.html
+++ b/index.html
@@ -120,6 +120,13 @@ search_box.submit()</code></pre>
    <li><a href=javasupport.html#working_with_colours>Working With Colours</a>
    <li><a href=javasupport.html#working_with>Working With</a>
   </ul></li>
+</ul>
+</div>
+
+
+<h2>Front Matter</h2>
+
+<ul id=frontmatter><ul>
  <li><a href=attr.html#copyright_and_attributions>Copyright and Attributions</a>
   <ul>
    <li><a href=attr.html#attributions>Attributions</a>
@@ -128,13 +135,4 @@ search_box.submit()</code></pre>
   </ul></li>
  <li><a href=ack.html#acknowledgements>Acknowledgements</a>
 </ul>
-</div>
-
-
-<h2>Front Matter</h2>
-
-<ul id=frontmatter>
- <li><a href=attr.html>Copyright and Attributions</a>
- <li><a href=conventions.html>Typographical Conventions</a>
- <li><a href=ack.html>Ackknowledgements</a>
 </ul>
