Put list of authors in attr.html using hs, remove ack.html

--- a/attr.html
+++ b/attr.html
@@ -1,5 +1,4 @@
-<!doctype html>
-<meta charset=utf-8>
+<!DOCTYPE html><meta charset=utf-8>
 <title>Copyright and Attributions</title>
 <script src=docs.js></script>
 
@@ -25,8 +24,42 @@
 
 <p>Thanks to:
 
-<ul>
+<div id=authors><ul>
+ <li><a href=mailto:ato@mozilla.com>Andreas Tolfsen</a>
+ <li><a href=mailto:austenjt@gmail.com>Jon Austen</a>
+ <li><a href=mailto:bizob2828@yahoo.com>bizob2828</a>
+ <li><a href=mailto:bizob2828@yahoo.com>Bob Evans</a>
+ <li><a href=mailto:botalov.andrey@gmail.com>Andrey Botalov</a>
+ <li><a href=mailto:brknthmb@gmail.com>Dan Chan</a>
+ <li><a href=mailto:danforkosh@yahoo.com>sheg</a>
+ <li><a href=mailto:dave.hunt@gmail.com>Dave Hunt</a>
+ <li><a href=mailto:djangofan@gmail.com>djangofan</a>
+ <li><a href=mailto:djangofan@gmail.com>Jon Thor Austen</a>
+ <li><a href=mailto:gavin@agmen2.co.uk>agmen</a>
+ <li><a href=mailto:hking@shutterfly.com>hking-shutterfly</a>
+ <li><a href=mailto:hoanluu@yahoo.com>hoanluu</a>
+ <li><a href=mailto:incubusattax@gmail.com>DirtyMoney</a>
+ <li><a href=mailto:ivan.de.marino@gmail.com>Ivan De Marino</a>
+ <li><a href=mailto:iwebdevelop@gmail.com>Paul Barton</a>
+ <li><a href=mailto:james.h.evans.jr@gmail.com>Jim Evans</a>
+ <li><a href=mailto:luke.semerau@gmail.com>Luke Inman-Semerau</a>
+ <li><a href=mailto:manoj9788@gmail.com>Manoj Kumar</a>
+ <li><a href=mailto:marilyn@gtf.org>marilyn</a>
+ <li><a href=mailto:mark.collin@lazeryattack.com>Mark Collin</a>
+ <li><a href=mailto:mmerrell@gmail.com>mmerrell</a>
+ <li><a href=mailto:mmerrell@whalesharkmedia.com>Marcus Merrell</a>
+ <li><a href=mailto:natrezek@gmail.com>NRezek</a>
+ <li><a href=mailto:nicegraham@gmail.com>Graham Abell</a>
+ <li><a href=mailto:oriekenjr@gmail.com>Oscar Rieken</a>
+ <li><a href=mailto:rivlin.pereira@gmail.com>Rivlin</a>
+ <li><a href=mailto:santiycr@gmail.com>Santiago Suarez OrdoÃ±ez</a>
+ <li><a href=mailto:whhone@gmail.com>Wai Hon Law</a>
+ <li><a href=mailto:xrobotika@yahoo.com>xrobotika</a>
+ <li><a href=mailto:zabostz@gmail.com>Zbigniew Z</a>
+ <li><a href=mailto:zcampbell@mozilla.com>Zac Campbell</a>
+ <li><a href=mailto:zeljko.filipin@gmail.com>Å½eljko Filipin</a>
 </ul>
+</div>
 
 
 <h2>HTML Version and Source Code</h2>
@@ -52,8 +85,7 @@
  but you can also find it on the
  <a href=//apache.org/licenses/LICENSE-2.0.html>Apache Foundation's websites</a>:
 
-<p><pre>
-                                 Apache License
+<p><pre>                                 Apache License
                            Version 2.0, January 2004
                         http://www.apache.org/licenses/
 
