Wrap #frontmatter in div, not ul

--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@ search_box.submit()</code></pre>
 
 <h2>Front Matter</h2>
 
-<ul id=frontmatter><ul>
+<div id=frontmatter><ul>
  <li><a href=attr.html#copyright_and_attributions>Copyright and Attributions</a>
   <ul>
    <li><a href=attr.html#attributions>Attributions</a>
@@ -135,4 +135,4 @@ search_box.submit()</code></pre>
   </ul></li>
  <li><a href=conventions.html#typographical_conventions>Typographical Conventions</a>
 </ul>
-</ul>
+</div>
