Correct reference to repo and links for help on checking it out

--- a/attr.html
+++ b/attr.html
@@ -65,13 +65,13 @@
 <h2>HTML Version and Source Code</h2>
 
 <p>An HTML version of this documentation is freely available from
- <a href=//seleniumhq.org/docs/>http://seleniumhq.org/docs/</a>.
+ <a href=//seleniumhq.github.io/docs>https://seleniumhq.github.io/docs</a>.
 
 <p>The source code for the examples inlucded
- and for the book itself is available from the central Selenium repository
- at <a href=//code.google.com/p/selenium/>https://code.google.com/p/selenium/</a>.
+ and for the book itself is available from the Selenium documentation repository
+ at <a href=//github.com/seleniumhq/docs>https://github.com/seleniumhq/docs</a>.
  See instructions on how to check out the code via git at
- <a href=//code.google.com/p/selenium/source/checkout>https://code.google.com/p/selenium/source/checkout</a>.
+ <a href=//help.github.com/articles/fetching-a-remote/>https://help.github.com/articles/fetching-a-remote/</a>.
 
 
 <h2>License</h2>
