--- a/quick.html
+++ b/quick.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <meta charset=utf-8>
 <title>Quick Tour</title>
+<link rel=stylesheet href=se.css>
 <script src=docs.js></script>
 
 <h1>Quick Tour</h1>
