--- a/start.html
+++ b/start.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <meta charset=utf-8>
 <title>Getting Started With WebDriver</title>
+<link rel=stylesheet href=se.css>
 <script src=docs.js></script>
 
 <h1>Getting Started With WebDriver</h1>
