--- a/best.html
+++ b/best.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <meta charset=utf-8>
 <title>Best Practices</title>
+<link rel=stylesheet href=se.css>
 <script src=docs.js></script>
 
 <h1>Best Practices</h1>
