--- a/grid.html
+++ b/grid.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <meta charset=utf-8>
 <title>Selenium Grid</title>
+<link rel=stylesheet href=se.css>
 <script src=docs.js></script>
 
 <h1>Selenium Grid</h1>
