--- a/intro.html
+++ b/intro.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <meta charset=utf-8>
 <title>Introduction</title>
+<link rel=stylesheet href=se.css>
 <script src=docs.js></script>
 
 <h1>Introduction</h1>
