--- a/javasupport.html
+++ b/javasupport.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <meta charset=utf-8>
 <title>The Java Support Package</title>
+<link rel=stylesheet href=se.css>
 <script src=docs.js></script>
 
 <h1>The Java Support Package</h1>
