--- a/worst.html
+++ b/worst.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <meta charset=utf-8>
 <title>Worst Practices</title>
+<link rel=stylesheet href=se.css>
 <script src=docs.js></script>
 
 <h1>Worst Practices</h1>
