Generate getting started menu on index

--- a/attr.html
+++ b/attr.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html><meta charset=utf-8>
 <title>Copyright and Attributions</title>
-<link rel=stylesheet href=se.css>
+<link href=se.css rel=stylesheet>
 <script src=docs.js></script>
 
 <h1>Copyright and Attributions</h1>
