--- a/index.html
+++ b/index.html
@@ -45,9 +45,14 @@ search_box.submit()</code></pre>
  we have a few resources that can help you
  get up to speed right away.
 
-<ul>
- <li><a href=quick.html>Quick Tour</a>
+<div id=gettingstarted><ul>
+ <li><a href=quick.html#quick_tour>Quick Tour</a>
+  <ul>
+   <li><a href=quick.html#first>First</a>
+   <li><a href=quick.html#second>Second</a>
+  </ul></li>
 </ul>
+</div>
 
 
 <h2>Narrative Documentation</h2>
