--- a/intro.html
+++ b/intro.html
@@ -2,6 +2,8 @@
 <meta charset=utf-8>
 <title>Introduction</title>
 <link rel=stylesheet href=se.css>
+<link rel=prev href=/ title=Index>
+<link rel=next href=install.html title=Install>
 <script src=docs.js></script>
 
 <h1>Introduction</h1>
