Add prev and next links to content

--- a/attr.html
+++ b/attr.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html><meta charset=utf-8>
 <title>Copyright and Attributions</title>
 <link href=se.css rel=stylesheet>
+<link rel=prev href=javasupport.html title="The Java Support Package">
+<link rel=next href=conventions.html title="Typographical Conventions">
 <script src=docs.js></script>
 
 <h1>Copyright and Attributions</h1>
