--- a/conventions.html
+++ b/conventions.html
@@ -2,6 +2,7 @@
 <meta charset=utf-8>
 <title>Typographical Conventions</title>
 <link rel=stylesheet href=se.css>
+<link rel=prev href=attr.html title="Copyright and Attributions">
 <script src=docs.js></script>
 
 <h1>Typographical Conventions</h1>
