--- a/grid.html
+++ b/grid.html
@@ -2,6 +2,8 @@
 <meta charset=utf-8>
 <title>Selenium Grid</title>
 <link rel=stylesheet href=se.css>
+<link rel=prev href=worst.html title="Worst Practices">
+<link rel=next href=drivers.html title="Driver Idiosyncracies">
 <script src=docs.js></script>
 
 <h1>Selenium Grid</h1>
