--- a/install.html
+++ b/install.html
@@ -2,6 +2,8 @@
 <meta charset=utf-8>
 <title>Installation</title>
 <link rel=stylesheet href=se.css>
+<link rel=prev href=intro.html title=Introduction>
+<link rel=next href=start.html title="Getting Started">
 <script src=docs.js></script>
 
 <h1>Selenium Installation</h1>
