--- a/javasupport.html
+++ b/javasupport.html
@@ -2,6 +2,8 @@
 <meta charset=utf-8>
 <title>The Java Support Package</title>
 <link rel=stylesheet href=se.css>
+<link rel=prev href=drivers.html title="Driver Idiosyncracies">
+<link rel=next href=attr.html title="Copyright and Attributions">
 <script src=docs.js></script>
 
 <h1>The Java Support Package</h1>
