--- a/start.html
+++ b/start.html
@@ -2,6 +2,8 @@
 <meta charset=utf-8>
 <title>Getting Started With WebDriver</title>
 <link rel=stylesheet href=se.css>
+<link rel=prev href=install.html title=Installation>
+<link rel=next href=wd.html title=WebDriver>
 <script src=docs.js></script>
 
 <h1>Getting Started With WebDriver</h1>
