--- a/worst.html
+++ b/worst.html
@@ -2,6 +2,8 @@
 <meta charset=utf-8>
 <title>Worst Practices</title>
 <link rel=stylesheet href=se.css>
+<link rel=prev href=best.html title="Best Practices">
+<link rel=next href=grid.html title=Grid>
 <script src=docs.js></script>
 
 <h1>Worst Practices</h1>
