--- a/best.html
+++ b/best.html
@@ -2,6 +2,8 @@
 <meta charset=utf-8>
 <title>Best Practices</title>
 <link rel=stylesheet href=se.css>
+<link rel=prev href=remote.html title="Remote WebDriver">
+<link rel=next href=worst.html title="Worst Practices">
 <script src=docs.js></script>
 
 <h1>Best Practices</h1>
