--- a/remote.html
+++ b/remote.html
@@ -2,6 +2,8 @@
 <meta charset=utf-8>
 <title>Remote WebDriver</title>
 <link rel=stylesheet href=se.css>
+<link rel=prev href=wd.html title=WebDriver>
+<link rel=next href=best.html title="Best Practices">
 <script src=docs.js></script>
 
 <h1>Remote WebDriver</h1>
