Add links to index, quick, and intro

--- a/intro.html
+++ b/intro.html
@@ -2,7 +2,7 @@
 <meta charset=utf-8>
 <title>Introduction</title>
 <link rel=stylesheet href=se.css>
-<link rel=prev href=/ title=Index>
+<link rel=prev href=quick.html title="Quick Tour">
 <link rel=next href=install.html title=Install>
 <script src=docs.js></script>
 
