--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html><meta charset=utf-8>
 <title>Selenium Documentation</title>
 <link href=se.css rel=stylesheet>
+<link rel=next href=quick.html title="Quick Tour">
 <script src=docs.js></script>
 
 <h1>The Selenium Browser Automation Project</h1>
