Correct link to ToC

--- a/quick.html
+++ b/quick.html
@@ -2,7 +2,7 @@
 <meta charset=utf-8>
 <title>Quick Tour</title>
 <link rel=stylesheet href=se.css>
-<link rel=prev href=/ title="Table of Contents">
+<link rel=prev href=index.html title="Table of Contents">
 <link rel=next href=intro.html title=Introduction>
 <script src=docs.js></script>
 
