--- a/wd.html
+++ b/wd.html
@@ -2,6 +2,8 @@
 <meta charset=utf-8>
 <title>WebDriver</title>
 <link rel=stylesheet href=se.css>
+<link rel=prev href=start.html title="Getting Started">
+<link rel=next href=remote.html title="Remote WebDriver">
 <script src=docs.js></script>
 
 <h1>WebDriver</h1>
