--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 <link rel=next href=quick.html title="Quick Tour">
 <script src=docs.js></script>
 
+<body class=front>
+
 <h1>The Selenium Browser Automation Project</h1>
 
 <p>Selenium is an umbrella project for various tools and libraries that
