Improve introduction paragraph to contain what we do

--- a/index.html
+++ b/index.html
@@ -8,10 +8,13 @@
 
 <h1>The Selenium Browser Automation Project</h1>
 
-<p>Selenium is an umbrella project for various tools and libraries that
- enable automation of web browsers.
- Amongst other things it provides the support infrastructure
- for the <a href=//w3c.github.com/webdriver>W3C WebDriver specification</a>,
+<p>Selenium is an umbrella project for a range of tools and libraries
+ that enable and support the automation of web browsers.
+
+<p>It provides extensions to emulate user interaction with browsers,
+ a distribution server for scaling browser allocation,
+ and the infrastructure for implementations of the
+ <a href=//w3c.github.com/webdriver>W3C WebDriver specification</a>
  that lets you write interchangable code for all major web browsers.
 
 <p>The project is made possible by volunteer contributors
