--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
  an interface to write instruction sets that can be run interchangably in many browsers.
  Here is one of the simplest instructions you can make:
 
+<!-- TODO(ato): We should find a better example.  Perhaps Todo list? -->
 <pre><code class=python>from selenium import webdriver
 
 driver = webdriver.Firefox()
