Move scalability to separate paragraph

--- a/intro.html
+++ b/intro.html
@@ -14,32 +14,23 @@
 
 <h3>Selenium controls web browsers</h3>
 
-<p>Selenium is a toolset for web browser automation
+<p><em>Selenium</em> is many things,
+ but at its core it's a toolset for web browser automation
  that uses the best techniques available
  to remotely control browser instances
- and emulate user interaction with the browser.
+ and emulate a user's interaction with the browser.
 
-<p>Used primarily for testing,
- it allows users to simulate common activities performed by end-users:
+<p>It allows users to simulate common activities performed by end-users;
  entering text into fields,
  selecting drop-down values and checking boxes,
- and clicking links.
+ and clicking links in documents.
  It also provides many other controls such as mouse movement,
  arbitrary JavaScript execution, and much more.
 
-<p>Imagine a bank of computers in your server room,
- data center, or even in the cloud–
- all firing up browsers at the same time
- hitting your site's links, forms, and tables–
- testing your application 24 hours a day.
- Through a simple, unified programming interface
- (supporting many of the most important and frequently-used languages),
- these tests will run tirelessly in parallel,
- reporting back to you when errors occurred.
-
-<p>The Selenium project's goal is to make this reality
- by providing users with tools and documentation to not only control browsers,
- but to make it easy to scale and deploy such grids.
+<p>Although used primarily for front-end testing of websites,
+ Selenium is at its core a browser user agent <em>library</em>.
+ The interfaces are ubiquitous to their application,
+ which encourages composition with other libraries to suit your purpose.
 
 
 <h3>One Interface to Rule Them All</h3>
@@ -60,6 +51,33 @@
  Internet Explorer, Chrome, and all other supported browsers.
 
 
+<h3>Tools and Support</h3>
+
+<p>Since Selenium is minimalist by nature
+
+<p>Selenium's minimalist design approach gives it
+ versatility to be included as a component in bigger applications.
+ The surrounding infrastructure provided under the Selenium umbrella
+ gives you the tools to put together
+ your own <a href=grid.html>grid of browsers</a>
+ so tests can be run on different browsers,
+ multiple operating systems,
+ across a range of machines.
+
+<p>Imagine a bank of computers in your server room or data centre
+ all firing up browsers at the same time
+ hitting your site's links, forms,
+ and tables&mdash;testing your application 24 hours a day.
+ Through the simple programming interface
+ provided for the most common languages,
+ these tests will run tirelessly in parallel,
+ reporting back to you when errors occurs.
+
+<p>It's an aim to help make this a reality for you,
+ by providing users with tools and documentation to not only control browsers,
+ but to make it easy to scale and deploy such grids.
+
+
 <h3>Who Uses Selenium</h3>
 
 <p>Many of the most important companies in the world
@@ -68,15 +86,16 @@
  As it has grown in popularity, so have its requirements and challenges multiplied.
 
 <p>As the web becomes more complicated
- and new technologies are added to sites around the world,
- it is the mission of this project to keep up with them where possible.
+ and new technologies are added to websites,
+ it's the mission of this project to keep up with them where possible.
  Being an open source project,
  this support is provided through the generous donation of time from many volunteers,
  every one of which has a “day job”.
- Another mission of the project is to encourage more volunteers
- and build a strong community,
+ Another mission of the project is to encourage
+ more volunteers to partake in this effort,
+ and build a strong community
  so that the project can continue to keep up with emerging technologies
- and remain the dominant platform for function test automation.
+ and remain a dominant platform for functional test automation.
 
 
 <h3>History</h3>
